fixed alignment of text on About button on index.html

--- a/users/static/styles.css
+++ b/users/static/styles.css
@@ -833,7 +833,7 @@ header.masthead {
   color: black;
   font-size: 20px;
   font-weight: bold;
-  padding: 0.5rem 3rem;
+  padding: 0.5rem;
   outline: none;
   border: 0 !important;
   margin-right: 10px;
